# Revio

./: .gitignore  README.md  package-lock.json  package.json  start-dev.bat
backend/: package-lock.json  package.json
backend/src/: server.js  storageManager.js  versionEngine.js  watcherBridge.js
backend/test_env/: test2_restored_1778350463506.txt
backend/test_env/.restorex/: metadata.json
backend/test_env/.restorex/versions/: 2026-05-09T18-14-23-473Z__test_restored_1778350414088.txt  2026-05-09T18-14-23-489Z__test2.txt
backend/test_env_gzip/: test3.txt  test3_restored_1778351249615.txt
backend/test_env_gzip/.restorex/: metadata.json
backend/test_env_gzip/.restorex/versions/: 2026-05-09T18-27-29-566Z__test3.txt  2026-05-09T18-28-53-157Z__test3_restored_1778351249615.txt  2026-05-09T18-28-53-158Z__test3_restored_1778351249620.txt
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  hooks.js  utils.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs  storage_manager.rs  version_engine.rs
frontend/src/components/: FileList.jsx  RestoreModal.jsx  VersionTimeline.jsx
frontend/src/pages/: Dashboard.jsx  Settings.jsx
frontend/src/styles/: index.css
watcher/: build.bat  watcher.cpp
